# fastAPIvod

./: .coverage  pyproject.toml  test.ps1  test.py
.github/workflows/: ci.yml
app/: __init__.py
app/apis/v1/: meeting_router.py
app/configs/: base_config.py
app/dtos/: create_meeting_response.py
app/services/: meeting_service.py
app/tests/apis/v1/: test_meeting_router.py
app/utils/: base62.py
migrations/models/: 0_20251012192815_init.py
